@@ -113,7 +113,8 @@ boost::wave::util::file_position_type current_position;
 
         position_type pos(argv[1]);
         lexer_type it = lexer_type(instr.begin(), instr.end(), pos, 
-            boost::wave::support_cpp);
+            boost::wave::language_support(
+                boost::wave::support_cpp|boost::wave::support_long_long));
         lexer_type end = lexer_type();
 
         while (it != end) {
