@@ -1,4 +1,4 @@
-/* Generated by re2c 0.9.7.dev on Wed May 11 08:14:11 2005 */
+/* Generated by re2c 0.9.7.dev on Wed May 11 12:38:47 2005 */
 #line 1 "cpp.re"
 /*=============================================================================
     Boost.Wave: A Standard compliant C++ preprocessor library
@@ -3675,7 +3675,7 @@ yy261:  ++YYCURSOR;
   goto yy262;
 yy262:
 #line 547 "cpp.re"
-{ RET(T_OROR); }
+{ RET(T_OROR_TRIGRAPH); }
 #line 3680 "cpp_re.cpp"
 yy263:  ++YYCURSOR;
   goto yy264;
@@ -4609,13 +4609,13 @@ yy462:  ++YYCURSOR;
   goto yy463;
 yy463:
 #line 546 "cpp.re"
-{ RET(T_OROR); }
+{ RET(T_OROR_TRIGRAPH); }
 #line 4614 "cpp_re.cpp"
 yy464:  ++YYCURSOR;
   goto yy465;
 yy465:
 #line 533 "cpp.re"
-{ RET(T_ORASSIGN); }
+{ RET(T_ORASSIGN_TRIGRAPH); }
 #line 4620 "cpp_re.cpp"
 yy466:  yych = *++YYCURSOR;
   if(yych != '!') goto yy2;
@@ -4624,13 +4624,13 @@ yy467:  ++YYCURSOR;
   goto yy468;
 yy468:
 #line 549 "cpp.re"
-{ RET(T_OROR); }
+{ RET(T_OROR_TRIGRAPH); }
 #line 4629 "cpp_re.cpp"
 yy469:  ++YYCURSOR;
   goto yy470;
 yy470:
 #line 528 "cpp.re"
-{ RET(T_XORASSIGN); }
+{ RET(T_XORASSIGN_TRIGRAPH); }
 #line 4635 "cpp_re.cpp"
 yy471:  yych = *++YYCURSOR;
   if(yych == '?') goto yy474;
